se separó del home la vista de usuarios, dashboard, header y nav a cada uno se le creo su controller.